--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/node": "18.15.11",
 		"@types/react": "18.0.32",
 		"@types/react-dom": "18.0.11",
+		"i18n-next": "^0.0.4",
 		"next": "13.2.4",
 		"polished": "^4.2.2",
 		"react": "18.2.0",
