--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/node": "18.15.11",
 		"@types/react": "18.0.32",
 		"@types/react-dom": "18.0.11",
+		"animejs": "^3.2.1",
 		"i18n-next": "^0.0.4",
 		"next": "13.2.4",
 		"polished": "^4.2.2",
@@ -22,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-do-expressions": "^7.18.6",
+		"@types/animejs": "^3.1.7",
 		"@types/styled-components": "^5.1.26",
 		"babel-plugin-styled-components": "^2.0.7",
 		"eslint": "8.37.0",
