--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@babel/plugin-proposal-do-expressions": "^7.18.6",
 		"@types/animejs": "^3.1.7",
+		"@types/react-transition-group": "^4.4.5",
 		"@types/styled-components": "^5.1.26",
 		"babel-plugin-styled-components": "^2.0.7",
 		"eslint": "8.37.0",
