--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"animejs": "^3.2.1",
 		"i18n-next": "^0.0.4",
 		"next": "13.2.4",
+		"next-fonts": "^1.5.1",
 		"polished": "^4.2.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
