--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"framer-motion": "^12.26.2",
 		"lucide-react": "^0.562.0",
 		"next": "latest",
+		"next-intl": "^4.7.0",
 		"react": "latest",
 		"react-dom": "latest",
 		"tailwind-merge": "^3.4.0"
