--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,5 @@
 	"tabWidth": 2,
 	"printWidth": 125,
 	"proseWrap": "always",
-	"trailingComma": "all",
-	"editor.formatOnSave": true
+	"trailingComma": "all"
 }
