--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		]
 	},
 	"dependencies": {
+		"@marsidev/react-turnstile": "^1.4.1",
 		"@radix-ui/react-toast": "^1.2.15",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -23,12 +24,15 @@
 		"lucide-react": "^0.562.0",
 		"next": "latest",
 		"next-intl": "^4.7.0",
+		"nodemailer": "^7.0.12",
 		"react": "latest",
 		"react-dom": "latest",
-		"tailwind-merge": "^3.4.0"
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.3.5"
 	},
 	"devDependencies": {
 		"@types/node": "latest",
+		"@types/nodemailer": "^7.0.5",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
 		"autoprefixer": "^10.4.23",
